--- a/project/Makefile
+++ b/project/Makefile
@@ -1,5 +1,7 @@
 FRONT_END_BINARY=frontApp
 BROKER_BINARY=brokerApp
+AUTH_BINARY=authApp
+LOGGER_BINARY=loggerServiceApp
 
 ## up: starts all containers in the background without forcing build
 up:
@@ -15,16 +17,22 @@ up_build: build_broker
 	docker-compose up --build -d
 	@echo "Docker images built and started!"
 
-## down: stop docker compose
-down:
-	@echo "Stopping docker compose..."
-	docker-compose down
-	@echo "Done!"
-
 ## build_broker: builds the broker binary as a linux executable
 build_broker:
 	@echo "Building broker binary..."
 	cd ../broker-service && env GOOS=linux CGO_ENABLED=0 go build -o ${BROKER_BINARY} ./cmd/api
+	@echo "Done!"
+
+## build_logger: builds the logger binary as a linux executable
+build_logger:
+	@echo "Building logger binary..."
+	cd ../logger-service && env GOOS=linux CGO_ENABLED=0 go build -o ${LOGGER_BINARY} ./cmd/api
+	@echo "Done!"
+
+## build_auth: builds the auth binary as a linux executable
+build_auth:
+	@echo "Building auth binary..."
+	cd ../authentication-service && env GOOS=linux CGO_ENABLED=0 go build -o ${AUTH_BINARY} ./cmd/api
 	@echo "Done!"
 
 ## build_front: builds the frone end binary
@@ -36,7 +44,6 @@ build_front:
 ## start: starts the front end
 start: build_front
 	@echo "Starting front end"
-	cd ../front-end && go build -o ${FRONT_END_BINARY} ./cmd/web
 	cd ../front-end && ./${FRONT_END_BINARY} &
 
 ## stop: stop the front end
